--- a/choco.config
+++ b/choco.config
@@ -9,30 +9,31 @@
     <package id="dotnetfx" />
     <package id="powershell" />
     <!--Standard use-->
-    <package id="googlechrome" />
+    <package id="vivaldi" />
     <package id="7zip.install" />
     <package id="vlc" />
     <package id="totalcommander" />
     <package id="vmware-horizon-client" />
     <package id="logitech-options" />
     <package id="sharex" />
-    <package id="googledrive" />
-    <package id="notion" />
+    <package id="google-backup-and-sync" />
     <package id="qbittorrent" />
     <package id="powertoys" />
     <package id="calibre" />
-    <package id="office365proplus" />
+    <package id="spotify" />
     <!--Entertainment-->
     <package id="steam" />
     <package id="goggalaxy" />
     <package id="nvidia-geforce-now" />
+    <package id="itch" />
+    <package id="playnite" />
+    <package id="ubisoft-connect" />
+    <package id="epicgameslauncher" />
     <!--Development-->
     <package id="git.install" />
     <package id="vscode" />
     <package id="putty.install " />
     <package id="winscp" />
-    <package id="docker-desktop" />
-    <package id="pycharm-community" />
+    <package id="postman" />
     <package id="microsoft-windows-terminal" />
-    <package id="sysinternals" />
 </packages>
