--- a/choco_home.config
+++ b/choco_home.config
@@ -9,7 +9,6 @@
     <package id="dotnetfx" />
     <package id="powershell" />
     <!--Standard use-->
-    <package id="vivaldi" />
     <package id="7zip.install" />
     <package id="vlc" />
     <package id="totalcommander" />
@@ -29,6 +28,7 @@
     <package id="playnite" />
     <package id="ubisoft-connect" />
     <package id="epicgameslauncher" />
+    <package id="origin" />
     <!--Development-->
     <package id="git.install" />
     <package id="vscode" />
@@ -36,4 +36,6 @@
     <package id="winscp" />
     <package id="postman" />
     <package id="microsoft-windows-terminal" />
+    <package id="jetbrainstoolbox" />
+    <package id="microsoft-build-tools" />
 </packages>
