--- a/choco_home.config
+++ b/choco_home.config
@@ -9,6 +9,7 @@
     <package id="dotnetfx" />
     <package id="powershell" />
     <!--Standard use-->
+    <package id="vivaldi.install" />
     <package id="7zip.install" />
     <package id="vlc" />
     <package id="totalcommander" />
@@ -19,8 +20,9 @@
     <package id="qbittorrent" />
     <package id="powertoys" />
     <package id="calibre" />
-    <package id="spotify" />
+    <package id="virtualbox" packageParameters="/ExtensionPack"/>
     <!--Entertainment-->
+    <package id="spotify" />
     <package id="steam" />
     <package id="goggalaxy" />
     <package id="nvidia-geforce-now" />
