--- a/choco_work.config
+++ b/choco_work.config
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
-    <!--Drivers-->
     <!--Enviroment-->
     <package id="python3" />
     <package id="vcredist140" />
     <package id="dotnetfx" />
     <package id="powershell" />
+    <package id="mysql-connector" />
+    <package id="msoledbsql" />
     <!--Standard use-->
+    <package id="vivaldi.install" />
+    <package id="vmware-horizon-client" />
     <package id="logitech-options" />
     <package id="powertoys" />
-    <package id="spotify" />
+    <package id="virtualbox" />
     <!--Entertainment-->
+    <package id="spotify" />
     <!--Development-->
     <package id="git.install" />
     <package id="vscode" />
     <package id="putty.install " />
     <package id="winscp" />
+    <package id="soapui" />
     <package id="postman" />
     <package id="microsoft-windows-terminal" />
     <package id="jetbrainstoolbox" />
