--- a/choco_home.config
+++ b/choco_home.config
@@ -8,6 +8,7 @@
     <package id="vcredist140" />
     <package id="dotnetfx" />
     <package id="powershell" />
+    <package id="curl" />
     <!--Standard use-->
     <package id="vivaldi.install" />
     <package id="7zip.install" />
