--- a/choco_work.config
+++ b/choco_work.config
@@ -7,6 +7,7 @@
     <package id="powershell" />
     <package id="mysql-connector" />
     <package id="msoledbsql" />
+    <package id="curl" />
     <!--Standard use-->
     <package id="vivaldi.install" />
     <package id="vmware-horizon-client" />
