cascadia code + nerd font

--- a/choco_home.config
+++ b/choco_home.config
@@ -9,6 +9,7 @@
     <package id="dotnetfx" />
     <package id="powershell" />
     <package id="curl" />
+    <package id="cascadia-code-nerd-font" />
     <!--Standard use-->
     <package id="vivaldi.install" />
     <package id="7zip.install" />
