--- a/choco_work.config
+++ b/choco_work.config
@@ -8,6 +8,7 @@
     <package id="mysql-connector" />
     <package id="msoledbsql" />
     <package id="curl" />
+    <package id="cascadia-code-nerd-font" />
     <!--Standard use-->
     <package id="vivaldi.install" />
     <package id="vmware-horizon-client" />
