work SQL Studio

--- a/choco_work.config
+++ b/choco_work.config
@@ -26,5 +26,6 @@
     <package id="postman" />
     <package id="microsoft-windows-terminal" />
     <package id="jetbrainstoolbox" />
+    <package id="sql-server-management-studio" />
     <package id="microsoft-build-tools" />
 </packages>
